<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wifi_hotspot_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/wifi_hotspot_bg_upper"
        android:gravity="bottom|right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/lbl_hotspot"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/wifi_hotspot_bg"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_hotspot_desc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btnHotspotOnOff"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/wifi_hotspot_btn_bg"
            android:drawableLeft="@drawable/signal_48px"
            android:textColor="@android:color/black"
            android:paddingLeft="10dp"
            android:text="@string/lbl_hotspot_off" />

        <TextView
            android:id="@+id/textViewHotspotSsid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_hotspot_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewHotspotKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_hotspot_key"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>
